# iowow

./: .astylerc  .clang-format  .clang-tidy  .editorconfig  .gdbinit  .gitignore  .ignore  .lvimrc  .travis.yml  Autark  CMakeLists.txt  Changelog  DOXYMAIN.md  Doxyfile.in  LICENSE  Makefile  README.md  WINDOWS.md  build.sh  hints.txt  iowow.project  iowow.workspace  pvs_studio_analyze.sh  release.sh  state1.diff  test_block_allocation1.fsm  test_fsm_open_close.fsm  test_fsm_uniform_alloc.fsm  uncrustify.cfg
.autark/: fetch_resource.sh  system.sh  test_blocks.sh  test_header.sh  test_pthread.sh  test_symbol.sh
.builds/: freebsd-latest.yml  linux-ubuntu.yml
.github/: SUPPORT.md
artwork/: iowow.xcf
autark-cache/.autark/: system.sh.deps  system.sh.env  test_system  test_system.c
autark-cache/src/: .161.deps  .163.deps  iwcfg.h  libiowow.pc
autark-cache/src/.autark/: a.out  test_pthread.c  test_pthread.sh.deps  test_pthread.sh.env  test_qsort_r.sh.deps
cmake/Modules/: FindAtomic.cmake  FindCUnit.cmake  Win32LIBTools.cmake
doc/: hints.txt
doc/man/: libiowow.3
installer/: CMakeLists.txt
man/: CMakeLists.txt  iowow.3
src/: Autark  CMakeLists.txt  basedefs.h  iowow.c  iowow.h  iwcfg.h.in  libiowow.pc.in
src/.autark/: test_pthread.sh
src/fs/: Autark  iwdlsnr.h  iwexfile.c  iwexfile.h  iwfile.c  iwfile.h  iwfs.c  iwfsmfile.c  iwfsmfile.h  iwrwlfile.c  iwrwlfile.h
src/fs/tests/: Autark  CMakeLists.txt  iwfs_test1.c  iwfs_test2.c  iwfs_test3.c  kbtree.h
src/json/: Autark  iwbinn.c  iwbinn.h  iwjser.c  iwjson.c  iwjson.h  iwjson_internal.h  iwjsreg.c  iwjsreg.h
src/json/tests/: Autark  CMakeLists.txt  iwjsreg_test1.c  jbl_test1.c  jbl_test2.c  jbl_test_binn1.c  jbl_test_binn2.c
src/json/tests/data/: jbl_test2.001.expected.xml
src/kv/: Autark  CMakeLists.txt  README.md  data-format.txt  data.txt  iwal.c  iwal.h  iwdup.c  iwdup.h  iwkv.c  iwkv.h  iwkv.txt  iwkv_dup.c  iwkv_dup.h  iwkv_internal.h  iwkvdbg.c  iwkvdbg.inc
src/kv/benchmark/: .flake8  CMakeLists.txt  README.md  bdb_benchmark.c  benchmark_results.html  bmbase.c  iwkv_benchmark.c  kyc_benchmark.c  leveldb_benchmark.c  lmdb_benchmark.c  runbench.html  runbench.py  tc_benchmark.c  wiredtiger_benchmark.c
src/kv/dbg/: iwkvdbg.c
src/kv/examples/: CMakeLists.txt  compoundkeys1.c  cursors1.c  example1.c
src/kv/tests/: .gitattributes  Autark  CMakeLists.txt  garbage.data  iwkv_test1.c  iwkv_test10.c  iwkv_test1_1.ref  iwkv_test1_1_v2.ref  iwkv_test1_1w.ref  iwkv_test1_1w_v2.ref  iwkv_test1_2.ref  iwkv_test1_2_v2.ref  iwkv_test1_2w.ref  iwkv_test1_2w_v2.ref  iwkv_test1_3.ref  iwkv_test1_3_v2.ref  iwkv_test1_3w.ref  iwkv_test1_3w_v2.ref  iwkv_test2.c  iwkv_test3.c  iwkv_test4.c  iwkv_test5.c  iwkv_test6.c  iwkv_test7.c  iwkv_test8.c  iwkv_test9.c  iwkv_tests.h
src/log/: Autark  CMakeLists.txt  iwlog.c  iwlog.h
src/log/tests/: Autark  CMakeLists.txt  iwlog_test1.c
src/platform/: Autark  CMakeLists.txt  iwp.c  iwp.h  platform.c  platform.h
src/platform/linux/: linux.c
src/platform/tmpl/: iwcfg.h
src/platform/unix/: unix.c
src/platform/win32/: win32.c
src/platform/win32/mman/: mman.c  mman.h
src/rdb/: Autark  iwrdb.c  iwrdb.h
src/re/: Autark  README.txt  compile.c  cregex.h  iwre.c  iwre.h  parse.c  vm.c
src/re/tests/: Autark  CMakeLists.txt  iwre_test1.c
src/tmpl/: iowcfg.h  iwcfg.h  libiowow.pc.in
src/utils/: Autark  iwarr.c  iwarr.h  iwarrays.c  iwarrays.h  iwavl.c  iwavl.h  iwbits.h  iwchars.h  iwconv.c  iwconv.h  iwcsv.h  iwhmap.c  iwhmap.h  iwini.c  iwini.h  iwpool.c  iwpool.h  iwrb.c  iwrb.h  iwre.c  iwre.h  iwrefs.h  iwrlock.c  iwrlock.h  iwsha2.c  iwsha2.h  iwstree.c  iwstree.h  iwstw.c  iwstw.h  iwth.c  iwth.h  iwtp.c  iwtp.h  iwutils.c  iwutils.h  iwuuid.c  iwuuid.h  iwxstr.c  (+18 more)
src/utils/tests/: Autark  CMakeLists.txt  iwarr_test1.c  iwhmap_test1.c  iwrb_test1.c  iwrlock_test1.c  iwutils_test1.c
tools/win32/: run-gedb-server.sh
